# wearable-sensor-device

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  lsm303d.h  main.cpp  mpu6050.h  pa1010d.h  storage.h
3d housing model/: wsd bottom v2.stl  wsd bottom v3.stl  wsd bottom v3_1.stl  wsd top v2.stl  wsd top v3.stl
components/: CMakeLists.txt  buttons_controller.cpp  buttons_controller.h  screen_controller.cpp  screen_controller.h  tracker.cpp  tracker.h
core/: config.h  distance.h  helpers.h  ui.h
drivers/: CMakeLists.txt  lsm303d.cpp  lsm303d.h  lsm6dsox.cpp  lsm6dsox.h  pa1010d.cpp  pa1010d.h  storage.cpp  storage.h
drivers/display/: CMakeLists.txt  display.cpp  display.h  fonts.h  sharp_mip_display.cpp  sharp_mip_display.h  write.h
drivers/sharp_mip/: fonts.h  write.h
lsm6dsox/: CMakeLists.txt  lsm6dsox.cpp  lsm6dsox.h
pico-ssd1306/: CMakeLists.txt
utils/: CMakeLists.txt  data.h  distance.h  sensors_data.h  ui.h
wifi/: CMakeLists.txt  WiFi.cpp  WiFi.h  WiFiClient.h
wifi/utility/: spi_drv.cpp  spi_drv.h  wifi_drv.cpp  wifi_drv.h  wifi_spi.h  wl_definitions.h  wl_types.h
